--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 		<p id="evoluindo"> <em><strong>Os exercícios também são uma parte importante de todos nossos cursos, a medida que o aluno vai evoluindo eles tendem a ficar mais complexos.</strong></em></p>
 		<P id="duracao">Nossos cursos na sua grande maioria tem duração de seis messes, mas esse tempo pode variar de acordo com o curso que você optar</P>
 	<section>
-			<img id="baner" src="baner.png"><img id="banner2" src="banner2.jfif" >
+			<img id="baner" src="banner.png"><img id="banner2" src="banner2.jfif">
 			<h2 class="subtitulo">Nossa história</h2>
+			<button id="matricula"><strong>Matricule-se</strong></button>
+
 	</section>
 		<p id="fundados"><em><strong>Fomos fundados em 2022 por Thales Henrique J. Santos temos sede em Guairaça-pr, </strong></em>buscando sempre levar o conhecimento sobre linguagens de programação adiante, esse que desde o começo foi nosso propósito, ver cada vez mais alunos criando sites, jogos e sistemas nos motiva a continuar nessa jornada.</p>
 	<footer id="rodape">
-		<button id="Matricule-se"><strong>Matricule-se</strong></button>
+	
 		<h3>
 			<ul>
 				<li class="motivos">Matricule-se já e ganhe 1 mês grátis;</li>
@@ -32,9 +34,9 @@
 				<li class="motivos">Faça disso sua profissão.</li>
 			</ul>
 		</h3>
-		
-	</footer>
 
+	</footer>
+		
+	<script src="style.js"></script>
 </body>
 </html>
-//file:///C:/Users/renan/Desktop/trabalho%20pens.%20computacional/index.html
